# jsonschema

./: CHANGELOG.md  Dockerfile  README.md  cabal.project  cabal.project.freeze  jsonschema.cabal
.github/workflows/: docker-ci.yml
scripts/: release.sh  test-in-docker.sh
src/: JSONSchema.hs
src/Data/JSON/: JSONSchema.hs  ToJSONSchema.hs
src/JSONSchema/: ToJSONSchema.hs  Validation.hs
test/: Main.hs
test/JSONSchema/: Spec.hs
